--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,12 +4,11 @@ version = "0.1.0"
 description = "A collection of cloud function related to Blaise Case Management Application (CMA)"
 authors = ["James Anthony Williams <81305008+JAWilliamsONS@users.noreply.github.com>"]
 readme = "README.md"
-packages = [{include = "blaise_cma_functions"}]
 
 [tool.poetry.dependencies]
 python = "^3.9"
 black = "^24.3.0"
-blaise-restapi = {git = "https://github.com/ONSdigital/blaise-api-python-client.git", branch = "main"}
+blaise-restapi = {git = "https://github.com/ONSdigital/blaise-api-python-client.git", rev = "8556ddaef3d551989e7df80ed2d777833992c581"}
 pytest = "^8.1.1"
 
 [build-system]
