--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ blaise-restapi = {git = "https://github.com/ONSdigital/blaise-api-python-client.
 pytest = "^8.1.1"
 flask = "^3.0.3"
 pytest-cov = "^5.0.0"
+mypy = "^1.10.0"
 
 [build-system]
 requires = ["poetry-core"]
