--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pytest = "^8.1.1"
 flask = "^3.0.3"
 pytest-cov = "^5.0.0"
 mypy = "^1.10.0"
+isort = "^5.13.2"
 
 [build-system]
 requires = ["poetry-core"]
