--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ flask = "^3.0.3"
 pytest-cov = "^5.0.0"
 mypy = "^1.10.0"
 isort = "^5.13.2"
+codecov = "^2.1.13"
 
 [build-system]
 requires = ["poetry-core"]
