--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ black = "^24.3.0"
 pytest = "^8.1.1"
 flask = "^2.0.0"
 pytest-cov = "^5.0.0"
+python-dotenv = "^0.18.0"
 mypy = "^1.10.0"
 isort = "^5.13.2"
 codecov = "^2.1.13"
