fix: GitHub Actions with conflicting linting
...I think :thinking_face:

refs: BLAIS5-4239

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ blaise-restapi = {git = "https://github.com/ONSdigital/blaise-api-python-client"
 google-cloud-logging = "^3.10.0"
 flake8 = "^7.0.0"
 
+[tool.isort]
+profile = "black"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
