--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,9 @@
 [tool.poetry]
-name = "blaise-cma-functions"
+package_name = "blaise-cma-functions"
 version = "0.1.0"
 description = "A collection of cloud function related to Blaise Case Management Application (CMA)"
 authors = ["James Anthony Williams <81305008+JAWilliamsONS@users.noreply.github.com>"]
 readme = "README.md"
-package-mode = false 
 
 [tool.poetry.dependencies]
 python = "^3.9"
