--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "blaise-cma-functions"
+name = "blaise_cma_functions"
 version = "0.1.0"
 description = "A collection of cloud function related to Blaise Case Management Application (CMA)"
 authors = ["James Anthony Williams <81305008+JAWilliamsONS@users.noreply.github.com>"]
